fix spacing between feature description divs and padding

--- a/src/App.css
+++ b/src/App.css
@@ -250,6 +250,7 @@ table {
 		border-radius: 0%;
 		padding: 5em;
 		margin: 0 auto;
+		padding-bottom:0em;
 	}
 }
 
@@ -270,6 +271,13 @@ table {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+}
+
+@media screen and (max-width: 805px) {
+	.feature-description {
+		padding: 0em;
+
+	}
 }
 .feature-description h4 {
 	text-align: center;
